# snippets

./: README.md
api-ngrok/: main.go
append/: append.go  append_test.go  go.mod
array-slice/: go.mod  main.go
atomic/: go.mod  main.go
chaining/: go.mod  main.go
chi-gorilla/: go.mod  go.sum
cobra/: agl  go.mod  hello.go  main.go
comparable/: go.mod  main.go
context/: go.mod  main.go
csv/: go.mod  read.go  rh.csv  subscribers.csv  write.go
custom-tags/: go.mod  main.go
dates/: go.mod  main.go
embed/: main  main.go
embed-gofiber/: go.mod  go.sum  main.go  prest.toml
fiber/: go.mod  main.go
generics/: go.mod  main.go  struct.go
gorilla/: BUILD  WORKSPACE  bazel-bin  bazel-gorilla  bazel-out  bazel-testlogs  go.mod  main.go
gorilla/handlers/: BUILD.bazel  hello.go  hello_test.go  person.go  person_test.go
goroutine/: go.mod  main.go
graceful/: go.mod  main.go
grpc/: go.mod
heranca/: go.mod  main.go
http/: go.mod  server.go
httpfuzz/: go.mod  main.go  main_test.go
len-cap/: go.mod  len_cap.go  len_cap_test.go
live-reload/: .air.toml  go.mod  main.go
log/: go.mod  main.go
maps-memory-leak/: go.mod  main.go
migrate/: go.mod  go.sum  main.go
pointer-value/: go.mod  main.go
race-condition/: go.mod  main.go
readir/: file_readdir.go  file_readdir_chunk.go  go.mod  readdir.go  walk.go
rotulo-looping/: go.mod  main.go
select/: go.mod  main.go
soma/: go.mod  soma_test.go
sqlmock/: db.go  db_test.go  go.mod  go.sum
templates/: go.mod  main.go  output.yaml  template.yaml
testify/: go.mod  panic.go  panic_test.go  (+2 more)
(+23 files in other folders)
